Make gutter color to background color

--- a/lib/ace/theme/glarkio_black.css
+++ b/lib/ace/theme/glarkio_black.css
@@ -1,5 +1,6 @@
 .ace-glarkio-black .ace_gutter {
-  background: #484848; 
+  /* background: #484848;  */
+  background-color: #383838 
   color: #7f8c8d 
 }
 
