--- a/lib/ace/theme/glarkio_black.css
+++ b/lib/ace/theme/glarkio_black.css
@@ -1,7 +1,7 @@
 .ace-glarkio-black .ace_gutter {
-  /* background: #484848;  */
-  background-color: #383838 
-  color: #7f8c8d 
+  /* background: #484848;    */
+  background: #383838;
+  color: #7f8c8d
 }
 
 .ace-glarkio-black .ace_print-margin {
@@ -10,11 +10,12 @@
 }
 
 .ace-glarkio-black .ace_scroller {
-  background-color: #383838 
+  background-color: #383838
 }
 
 .ace-glarkio-black .ace_text-layer {
-  color: #ecf0f1  
+  /* color: #ecf0f1 */
+  color: #d5dcdf
 }
 
 .ace-glarkio-black .ace_cursor {
@@ -64,7 +65,7 @@
 .ace-glarkio-black .ace_keyword,
 .ace-glarkio-black .ace_meta,
 .ace-glarkio-black .ace_storage {
-  color: #ff7567  
+  color: #ff7567
 }
 
 .ace-glarkio-black .ace_constant.ace_character,
@@ -110,7 +111,7 @@
 
 .ace-glarkio-black .ace_variable.ace_parameter {
   font-style: italic;
-  color: #ff9232 
+  color: #ff9232
 }
 
 .ace-glarkio-black .ace_string {
